{
    "name": "PlayerCtrl",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "42802b6e-26fb-4925-8e26-021e54603554",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "9c4a8324-8622-4eeb-b0fc-e58684d9f4ac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "82428ef8-8274-4b57-910e-d94fc2dd58c9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "b76e8f14-6f22-4338-968a-53c00c60f59b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "9020fdcc-c82d-4380-9908-546dcb34e3ce",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ffb90438-c28d-4984-84f3-68605159782b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c7c600b0-4bef-4c99-95bd-e4906fec2360",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3fb54c91-884e-4e10-bcee-b91af026ce58",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "57d3c9fc-8eb5-4b93-93f4-e20efda06927",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "93b9fc20-e5f5-4ade-beec-d54e4043037c",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dace5d5-3059-4cf6-b2ab-95312e2e05a4",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.1)",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "280fa47c-9d8d-4fc9-b9ad-3652ee17d9dd",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "e94dca09-3ebf-4568-9bb1-237bfc0df6b1",
            "actions": [
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "4563eb25-ee7f-48e0-b0a0-c9fae101f23c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RB",
                    "type": "Button",
                    "id": "4af1ba33-1203-408c-a7e3-baf880379922",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RT",
                    "type": "Button",
                    "id": "c38ac1c0-12b7-43a4-a7f8-87dcf96e6a86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FixedCamera",
                    "type": "Button",
                    "id": "700e22c0-b56d-431f-96cc-a15fc92fabea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "FixedCameraWheelUpDown",
                    "type": "PassThrough",
                    "id": "644d06f7-2708-435b-9264-d39c0b023eff",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "33ab44be-3cc0-495b-994d-a7cceab39821",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "222a6906-cf56-46f5-b6ed-f055d9e0101c",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9b536ce-6114-4847-b447-37d99c0ce419",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0aae32b-7f61-4c68-846c-f2dd8ac1664c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b68b81b-36d0-4c72-9e8a-bfcc12227253",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RT",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d92e794e-8d86-4ea8-b0ea-538c97835906",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FixedCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f459ba24-6d2b-411b-bd3d-16be6e615ed6",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FixedCameraWheelUpDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cfc702b-7063-4aab-b525-563c266cdb72",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Test",
            "id": "48c0c9ff-e843-4a40-a89f-65c9a1d70705",
            "actions": [
                {
                    "name": "Test",
                    "type": "Button",
                    "id": "37514d2c-80c8-4e33-9812-ccb4e78c2ed3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shock_Test",
                    "type": "Button",
                    "id": "6af98cd7-132b-44f0-a5f1-985a848e641b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6dcc75ef-7592-459e-8e9c-ea07cee8c32a",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d4fdead-095a-44b0-8bd2-3cc74aac6957",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shock_Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "cc96a109-c44c-4cdb-9340-bbcb7e8de39e",
            "actions": [
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "60cfb1eb-2bb1-40bc-a2d1-7a362def1f39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Test_F",
                    "type": "Button",
                    "id": "b1e68e76-d972-4f9d-9167-ac261c40fefc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Test_G",
                    "type": "Button",
                    "id": "5b54ec84-6274-4ef9-b055-212f8e5234fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Test_Q",
                    "type": "Button",
                    "id": "54de1ee1-7697-4247-9948-b3a1abdb5ece",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Test_E",
                    "type": "Button",
                    "id": "19a5f3cd-6ef9-425a-80ec-1ff56af210e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Test_R",
                    "type": "Button",
                    "id": "640eca32-5330-42c2-8e56-f22a50cb99d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Test_Up",
                    "type": "Button",
                    "id": "445fca51-7dc6-41da-97ab-334c1c88b92d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Test_Down",
                    "type": "Button",
                    "id": "754c861e-de9d-46df-929e-2844d654f8f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Test_Anykey",
                    "type": "Button",
                    "id": "ee74fa8e-24f8-4786-9563-0afbb0356180",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "95b7e3ea-1e41-4a97-a4d7-77b905b555f2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d322ee81-750f-40f3-bf83-ddcf6de815a1",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_F",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd05d9d7-86df-4b64-88ba-d05d1ee7a963",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_G",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e11508d4-e1f8-4f9d-b0f4-c7862430bf78",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_Q",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d357556-b420-4d88-886c-6b4f7ec4cbf4",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_E",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08874238-2fd5-4c67-a6fb-303c240cd5a3",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_R",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bab4e5e-f5c4-4e53-a6e9-713136f6d0e3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e91121fc-9cd7-4e8a-80d3-147588f49513",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14caf109-7c4b-4bed-a862-816fd42da2a6",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test_Anykey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}